# rust-web-prototype

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs  middleware.rs  service.rs  test.rs
app/src/api/: users.rs
app/src/error/: mod.rs
app/src/model/: mod.rs
app/src/repository/: mod.rs
app/src/security/: jwt_provider.rs  middleware.rs  mod.rs
boot/: Cargo.toml
boot/src/: lib.rs
boot/src/builder/: kernel_middleware_chain.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/engine/: kernel.rs  mod.rs
core/src/error/: error.rs  error_dispatcher.rs
core/src/filter/: chain_builder.rs  filter.rs  mod.rs
core/src/handler/: handler.rs  registry.rs
framework/: Cargo.toml
framework/src/: lib.rs
framework/src/config/: mod.rs
framework/src/contract/: error.rs
framework/src/infra/: response.rs
framework/src/routing/: mod.rs  register.rs  route.rs
framework/src/runtime/: context.rs  dispatcher.rs
framework/src/types/: async_types.rs  http_types.rs  mod.rs
ioc_lite/: Cargo.toml
ioc_lite/src/: builder.rs  core.rs  internal.rs  lib.rs  lifecycle.rs  types.rs
ioc_lite_macro/: Cargo.toml
ioc_lite_macro/src/: attribute.rs  component.rs  expand.rs  lib.rs  proxy.rs  proxy_method.rs  registration.rs  utils.rs
web_kernel/: Cargo.toml
web_kernel/src/: lib.rs
web_kernel/src/engine/: factory.rs  mod.rs
web_kernel/src/error/: error_dispatcher.rs  mod.rs
web_kernel/src/handler/: handler.rs  mod.rs  registry.rs
web_kernel/src/http/: request.rs
web_kernel/src/middleware/: mod.rs
web_kernel/src/middleware/req_body_extractors/: mod.rs
web_kernel/src/runtime/: mod.rs  request_chain.rs
web_kernel_macro/: Cargo.toml
web_kernel_macro/src/: attributes.rs  endpoint.rs  lib.rs
web_kernel_macros/: Cargo.toml
(+18 files in other folders)
