[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
web_kernel = { path = "../web_kernel" }
ioc_lite = { path = "../ioc_lite" }
inventory = "0.3"

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
http = "1.4.0"

jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
form_urlencoded = "1.2.2"