[package]
name = "framework"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }

http = "1.4.0"
http-body-util = "0.1"

hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

bytes = "1"
serde = "1.0.228"
serde_json = "1.0.149"