[package]
name = "web_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"

tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

http = "1.4.0"
http-body-util = "0.1"

bytes = "1"
serde = "1.0.228"
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v7"] }
